<resources>
    <string name="app_name">Bee2Honey</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="status">Status</string>
    <string name="classifica">Classifica</string>
    <string name="i_miei_scan">I miei scan</string>
    <string name="posizione">Posizione</string>
    <string name="posizione_upper">POSIZIONE</string>
    <string name="scan">SCAN</string>
    <string name="punti">PUNTI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="title_activity_sign_in">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="obiettivi">Obiettivi</string>
    <string name="scan_string">Inquadra il QR Code</string>
    <string name="millefiori">Miele Millefiori</string>
    <string name="castagno">Miele di Castagno</string>
    <string name="acacia">Miele di Acacia</string>
    <string name="eucalipto">Miele di Eucalipto</string>
    <string name="girasole">Miele di Girasole</string>
    <string name="agrumi">Miele di Agrumi</string>
    <string name="timo">Miele di Timo</string>
    <string name="tiglio">Miele di Tiglio</string>
    <string name="melata">Miele di Melata</string>
    <string name="sulla">Miele di Sulla</string>
    <string name="altromiele">Miele molto raro</string>
    <string name="logo">Logo</string>
    <string name="livello">LIVELLO</string>
    <string name="honeyimage">honeyImage</string>
    <string name="nome_del_miele">Nome del miele</string>
    <string name="nome_del_produttore">Nome del produttore</string>
    <string name="descrizione">Descrizione</string>
    <string name="location_del_produttore">Location del produttore</string>
    <string name="new_scan">New Scan</string>
    <string name="citt_del_produttore">Città del produttore</string>
    <string name="nome_miele">Nome Miele</string>
    <string name="complimenti">Complimenti!</string>
    <string name="hai_guadagnato_20_punti">Hai guadagnato 20 punti!</string>
    <string name="punti_rimanenti">Ti rimangono %1$d punti al prossimo livello!</string>
    <string name="_0">0</string>
    <string name="star">star</string>
    <string name="curiosit">Curiosità</string>
</resources>