<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/secondaryColor"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <!-- Media -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/honeyListImg"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:layout_weight="7"
            android:contentDescription="@string/honeyimage"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/honey"
            app:strokeColor="@color/secondaryDarkColor"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/honeyListName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_del_miele"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/honeyListFirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nome_del_produttore"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/honeyListDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/descrizione"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>