<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/honeyCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="96dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="96dp"
    android:backgroundTint="@color/secondaryDarkColor"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/honeyImg"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="32dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:contentPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/honey"
            app:strokeColor="@color/secondaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/locationBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/primaryLightColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/siteBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_place_black_48"
            app:strokeColor="@color/secondaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siteBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@color/primaryLightColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/callBtn"
            app:layout_constraintStart_toEndOf="@+id/locationBtn"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_language_black_48"
            app:strokeColor="@color/secondaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/callBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/primaryLightColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/siteBtn"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_phone_black_48"
            app:strokeColor="@color/secondaryTextColor"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/honeyNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nome_del_miele"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyImg" />

        <TextView
            android:id="@+id/honeyDescTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/descrizione"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyNameTxt" />

        <TextView
            android:id="@+id/firmTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nome_del_produttore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyDescTxt" />

        <TextView
            android:id="@+id/firmLocationTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location_del_produttore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firmTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
