<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/honeyCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginTop="96dp"
    android:layout_marginRight="32dp"
    android:layout_marginBottom="96dp"
    android:backgroundTint="@color/primaryLightColor"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/honeyImg"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/secondaryColor"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:contentPadding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/honey"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/locationBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/secondaryColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/siteBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_place_white_48"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siteBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="32dp"
            android:background="@color/secondaryColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/callBtn"
            app:layout_constraintStart_toEndOf="@+id/locationBtn"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_language_white_48"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/callBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/secondaryColor"
            android:elevation="8dp"
            android:padding="4dp"
            android:scaleType="fitCenter"
            app:contentPadding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/siteBtn"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize"
            app:srcCompat="@drawable/outline_phone_white_48"
            app:strokeColor="@color/primaryTextColor"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/honeyNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/nome_del_miele"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyImg" />

        <TextView
            android:id="@+id/honeyDescTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/descrizione"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyNameTxt" />

        <TextView
            android:id="@+id/firmTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nome_del_produttore"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyDescTxt" />

        <TextView
            android:id="@+id/firmAddrTxt"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/location_del_produttore"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firmTxt" />

        <TextView
            android:id="@+id/firmCityCapTxt"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/citt_del_produttore"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firmAddrTxt" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firmCityCapTxt">

            <include
                android:id="@+id/star_info"
                layout="@layout/star_info" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
